--- a/Application/kz-desktop/src/view/academic-department/academic-home.html
+++ b/Application/kz-desktop/src/view/academic-department/academic-home.html
@@ -54,8 +54,10 @@
                   <td scope="col" id="mid-score">class code</td>
                   <td scope="col" id="final-score">course name</td>
                   <td scope="col" >
-                    <a href="" class="btn btn-warning" id="update-btn">Update</a>
-                    <a href="" class="btn btn-danger" id="delete-btn">Delete</a>
+                    <button class="btn btn-warning" id="update-btn">Update</button>
+                  </td>
+                  <td>
+                    <button class="btn btn-danger" id="delete-btn">Delete</button>
                   </td>
               </tr>
           </template>
