--- a/Application/kz-desktop/src/view/academic-department/insert-course.html
+++ b/Application/kz-desktop/src/view/academic-department/insert-course.html
@@ -9,7 +9,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-            <a class="navbar-brand" href="">Bee Portal</a>
+            <a class="navbar-brand" href="./academic-home.html">Bee Portal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -151,7 +151,7 @@
                 await addDoc(collection(db, "courseSession"), {
                     CourseID: docRef.id,
                     MaterialName: materials[i],
-                    Session: i,
+                    Session: (i+1),
                 });
             }
         }  
