--- a/Application/kz-desktop/src/view/administrative-department/allocate-class.html
+++ b/Application/kz-desktop/src/view/administrative-department/allocate-class.html
@@ -120,7 +120,9 @@
                     StudentNumber: students[i],
                     FinalExamScore: 0,
                     MidExamScore: 0,
-                    AssignmentScore:0
+                    AssignmentScore:0,
+                    ScoreStatus: "Unsubmitted",
+                    Notes: ""
                 });
             }
         }  
