--- a/Application/kz-desktop/src/view/lecturer/create-forum.html
+++ b/Application/kz-desktop/src/view/lecturer/create-forum.html
@@ -54,6 +54,12 @@
             <a class="dropdown-item" href="./create-group.html">Create Group</a>
           </div>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Student Score</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="./submit-students-score.html">Submit Student Score</a>
+          </div>
+        </li>
       </ul>
       <div id="myTabContent" class="tab-content">
             <div class="form" style="margin: 50px 100px">
