--- a/Application/kz-desktop/src/view/lecturer/create-group.html
+++ b/Application/kz-desktop/src/view/lecturer/create-group.html
@@ -20,15 +20,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./view-teaching-schedule.html">View Teaching Schedule</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Assignment</a>
-                            <div class="dropdown-menu">
-                              <a class="dropdown-item" href="./create-group-assignment.html">Create Group Assignment</a>
-                              <a class="dropdown-item" href="./create-individual-assignment.html">Create Individual Assignment</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="./create-group.html">Create Group</a>
-                            </div>
-                          </li>
                     </li>
                 </ul>
                 <ul style="list-style: none">
@@ -55,7 +46,7 @@
             <a class="nav-link" href="./view-student.html">Student</a>
           </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Assignment</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Assignment</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="./view-assignment.html">Assignment</a>
             <div class="dropdown-divider"></div>
@@ -63,6 +54,12 @@
             <a class="dropdown-item" href="./create-group.html">Create Group</a>
           </div>
         </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Student Score</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="./submit-students-score.html">Submit Student Score</a>
+            </div>
+          </li>
       </ul>
       <div id="myTabContent" class="tab-content">
             <div class="form" style="margin: 50px 100px">
