--- a/Application/kz-desktop/src/view/lecturer/view-forum.html
+++ b/Application/kz-desktop/src/view/lecturer/view-forum.html
@@ -20,15 +20,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./view-teaching-schedule.html">View Teaching Schedule</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Assignment</a>
-                            <div class="dropdown-menu">
-                              <a class="dropdown-item" href="./create-group-assignment.html">Create Group Assignment</a>
-                              <a class="dropdown-item" href="./create-individual-assignment.html">Create Individual Assignment</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="./create-group.html">Create Group</a>
-                            </div>
-                          </li>
                     </li>
                 </ul>
                 <ul style="list-style: none">
@@ -63,10 +54,16 @@
             <a class="dropdown-item" href="./create-group.html">Create Group</a>
           </div>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Student Score</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="./submit-students-score.html">Submit Student Score</a>
+          </div>
+        </li>
       </ul>
       <div id="myTabContent" class="tab-content">
-          <h2> <strong class="d-flex justify-content-center" >Forum</strong> </h2>
-          <td scope="col" id="detail-btn"><button class="btn my-2 my-sm-0 btn-outline-dark" type="submit" id="create-btn">Create New Forum</button></td>
+          <h2> <strong class="d-flex justify-content-center" style="margin-top: 75px;">Forum</strong> </h2>
+          <button class="btn my-2 my-sm-0 btn-outline-dark" type="submit" id="create-btn">Create New Forum</button>
             <table class="table table-hover">
                 <thead>
                 <tr>
@@ -80,14 +77,16 @@
                         <td scope="col" id="user">class code</td>
                         <td scope="col" id="title">course name</td>
                         <td scope="col" id="detail-btn"><button class="btn my-2 my-sm-0 btn-outline-dark" type="submit" id="detail-btn">Detail</button></td>
-                    </tr>
+                        <td scope="col" ><button style="display: none;" id="btn-update" type="button" class="btn btn-warning">Update</button>
+                          <button id="btn-delete" style="display: none;" type="button" class="btn btn-danger">Delete</button></td>
+                      </tr>
                 </template>
                 </tbody>
             </table>
         </div>
   </body>
   <script type="module">
-    import { addDoc, Firestore, collection, getDocs, getDoc, doc, getFirestore, query, where } from 'https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js'
+    import { addDoc, Firestore, collection, getDocs, getDoc, doc, getFirestore, query, where, deleteDoc } from 'https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js'
     import { firebaseApp } from '../../firebase.js'
 
     const db = getFirestore(firebaseApp)
@@ -112,6 +111,34 @@
                 sessionStorage.setItem("currForum", query.id);
                 window.location.assign('./forum-detail.html')
             });
+
+            if(UserID == sessionStorage.getItem('currLecturer')){
+                clone.querySelector('#btn-delete').setAttribute("style", "display: block")
+                clone.querySelector('#btn-update').setAttribute("style", "display: block")
+            }
+
+            clone.querySelector('#btn-delete').addEventListener('click', async () => {
+                const docForum = await getDoc(doc(db, "forum", query.id));
+                const { UserID } = docForum.data()
+
+                if(UserID == sessionStorage.getItem('currLecturer')){
+                    await deleteDoc(doc(db, "forum", query.id));
+                    window.location.reload()
+                }else{
+                    alert('Cannot delete')
+                }
+            });
+
+            clone.querySelector('#btn-update').addEventListener('click', async () => {
+                const docForum = await getDoc(doc(db, "forum", query.id));
+                const { UserID } = docForum.data()
+
+                if(UserID == sessionStorage.getItem('currLecturer')){
+                    sessionStorage.setItem('currForum', query.id)
+                    window.location.assign('./update-forum.html')
+                }
+            });
+
 
             body.appendChild(clone)
         });
