--- a/Application/kz-desktop/src/view/lecturer/view-student.html
+++ b/Application/kz-desktop/src/view/lecturer/view-student.html
@@ -19,15 +19,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./view-teaching-schedule.html">View Teaching Schedule</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Assignment</a>
-                        <div class="dropdown-menu">
-                          <a class="dropdown-item" href="./create-group-assignment.html">Create Group Assignment</a>
-                          <a class="dropdown-item" href="./create-individual-assignment.html">Create Individual Assignment</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="./create-group.html">Create Group</a>
-                        </div>
-                      </li>
                 </ul>
                 <ul style="list-style: none">
                     <li class="nav-item dropdown">
@@ -59,6 +50,12 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="./create-assignment.html">Create Assignment</a>
             <a class="dropdown-item" href="./create-group.html">Create Group</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Student Score</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="./submit-students-score.html">Submit Student Score</a>
           </div>
         </li>
       </ul>
