--- a/Application/kz-desktop/src/view/student/view-score.html
+++ b/Application/kz-desktop/src/view/student/view-score.html
@@ -54,91 +54,88 @@
     </ul>
     <div id="myTabContent" class="tab-content">
     <div style="margin-top: 75px;">
-        <h2> <strong class="d-flex justify-content-center" >View Lecturer and Students</strong> </h2>
+        <h2 style="margin-top: 75px;"> <strong class="d-flex justify-content-center" >Student Score</strong> </h2>
         <table class="table table-hover">
             <thead>
-              <tr>
-                <th scope="col">Lecturer ID</th>
-                <th scope="col">Lecturer Name</th>
-              </tr>
-            </thead>
-            <tbody id="lec">
-              <template id="lec-template">
-                  <tr>
-                      <td scope="col" id="lec-id">class code</td>
-                      <td scope="col" id="lec-name">course name</td>
-                  </tr>
-              </template>
-            </tbody>
-          </table>
-
-          <table class="table table-hover">
-            <thead>
-              <tr>
+            <tr>
                 <th scope="col">Student ID</th>
                 <th scope="col">Student Name</th>
-              </tr>
+                <th scope="col">Assignment Score</th>
+                <th scope="col">Mid Exam Score</th>
+                <th scope="col">Final Exam Score</th>
+            </tr>
             </thead>
             <tbody id="stud">
-              <template id="stud-template">
-                  <tr>
-                      <td scope="col" id="stud-id">class code</td>
-                      <td scope="col" id="stud-name">course name</td>
-                  </tr>
-              </template>
+            <template id="stud-template">
+                <tr>
+                    <td scope="col" id="stud-id">class code</td>
+                    <td scope="col" id="stud-name">course name</td>
+                    <td scope="col" id="asg-score">a</td>
+                    <td scope="col" id="mid-score">a</td>
+                    <td scope="col" id="final-score">a</td>
+                    <td scope="col" id="-">
+                      <div class="input-group mb-3" id="protest-group" style="display: none;">
+                        <input type="text" id="note-field" class="form-control" placeholder="Input Notes" aria-label="Input Note" aria-describedby="button-addon2">
+                        <button class="btn btn-primary" type="button" id="submit-btn"></button>
+                    </div>
+                    </td>
+                </tr>
+            </template>
             </tbody>
-          </table>
-    </div>
-    </div>
+        </table>
+      
+      </div>
+      </div>
   </body>
   <script type="module">
-    import { Firestore, collection, getDocs, getDoc, doc, getFirestore, query, where } from 'https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js'
+    import { Firestore, collection, getDocs, getDoc, doc, query, getFirestore, where, updateDoc } from 'https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js'
     import { firebaseApp } from '../../firebase.js'
 
-    const db = getFirestore(firebaseApp)
-
+    const db = getFirestore(firebaseApp);
+    
     window.onload = async () => {
-
         var ClassID = sessionStorage.getItem('currClassID');
-        console.log(ClassID)
-        const docClass = await getDoc(doc(db, "classes", ClassID));
-        const { LecturerID } = docClass.data()
-
-        const docLec = await getDoc(doc(db, "lecturers", LecturerID));
-        console.log(docLec.data())
-        const { LecturerName } = docLec.data()
-        
-        let bodyLec = document.querySelector('#lec')
-        let templateLec = document.querySelector('#lec-template')
-        const cloneLec = templateLec.content.cloneNode(true)
-        const lec_id = cloneLec.querySelector('#lec-id')
-        const lec_name = cloneLec.querySelector('#lec-name')
-        
-        lec_id.textContent = LecturerID
-        lec_name.textContent = LecturerName
-        
-        bodyLec.appendChild(cloneLec)
-
-        const q = query(collection(db, "classDetail"), where("ClassID", "==", ClassID));
+        var StudentNum = sessionStorage.getItem('currStudent')
+        const q = query(collection(db, "classDetail"), where("ClassID", "==", ClassID), where("StudentNumber", "==", StudentNum));
         const querySnapshot = await getDocs(q);
         querySnapshot.forEach((query) => {
-            console.log(query.data())
-            const { StudentNumber } = query.data()
+            const { StudentNumber, AssignmentScore, MidExamScore, FinalExamScore, ScoreStatus } = query.data()
             
             async function test(){
                 const docStud = await getDoc(doc(db, "students", StudentNumber));
                 const { StudentName } = docStud.data()
-
 
                 let bodyStud = document.querySelector('#stud')
                 let templateStud = document.querySelector('#stud-template')
                 const cloneStud = templateStud.content.cloneNode(true)
                 const stud_id = cloneStud.querySelector('#stud-id')
                 const stud_name = cloneStud.querySelector('#stud-name')
-
+                const asgScore = cloneStud.querySelector('#asg-score')
+                const midScore = cloneStud.querySelector('#mid-score')
+                const finalScore = cloneStud.querySelector('#final-score')
+                var notes = cloneStud.querySelector('#note-field')
+                
                 stud_id.textContent = StudentNumber
                 stud_name.textContent = StudentName
+                midScore.textContent = MidExamScore
+                finalScore.textContent = FinalExamScore
+                asgScore.textContent = AssignmentScore
 
+                if(ScoreStatus == "Finalized"){  
+                  cloneStud.querySelector('#protest-group').setAttribute("style", "display:flex")
+                  cloneStud.querySelector('#submit-btn').addEventListener('click', async() => {   
+                    if(!(notes.value == "Assignment" || notes.value == "Final Exam" || notes.value == "Mid Exam")) {
+                      alert('Wrong notes')
+                    }else{
+                      const classRef = doc(db, "classDetail", query.id);
+                      await updateDoc(classRef, {
+                          ScoreStatus: "Protest",
+                          Notes: notes.value
+                        });
+                        window.location.reload()
+                    }
+                  })
+                }
 
                 bodyStud.appendChild(cloneStud)
             }
@@ -146,7 +143,7 @@
                 console.log(e.message)
             });
         })
-    }
+    };
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
